[package]
name = "wall-switch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.44", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
